Trying to fix image display bug on mobile

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ img {
   border-radius: 3px;
   border: #1d1e18 solid 2px;
   box-shadow: 0px 0px 35px 3px rgba(0,0,0,.3);
-  max-width: 346px;
+  max-width: 85%;
 }
 
 /* Fixes scroll links to account for fixed header. Neat trick! */
@@ -231,6 +231,7 @@ footer p {
     width: 25vw;
     height: auto;
     margin-right: 15px;
+    max-width: 346px;
   }
   #about-me, #contact {
     width: 90%;
